plugins {
    id 'java'
    id 'application'
}

group = 'edu.passau.apr'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    // JUnit 5 for testing (also needed at runtime for test compilation)
    implementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    implementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    implementation 'org.junit.platform:junit-platform-launcher:1.10.0'
    implementation 'org.opentest4j:opentest4j:1.3.0'
    implementation 'org.apiguardian:apiguardian-api:1.1.2'
    
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testImplementation 'org.junit.platform:junit-platform-launcher:1.10.0'
    
    // JSON parsing (optional, but useful for configs)
    implementation 'com.google.code.gson:gson:2.10.1'

    // JavaParser for AST-based program manipulation
    implementation 'com.github.javaparser:javaparser-core:3.26.1'
}


application {
    mainClass = 'edu.passau.apr.Main'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('run') {
    standardInput = System.in
}
